--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
         <div class="header_top fds-color__bg--fourth">
             <div class="fds-layout-grid fds-align--right fmc-py-2">
                 <ul class="header_top__menu menu_small">
-                    <li class="fds-color__text--primary"><a href="#">Log out</a></li>
+                    <li class="fds-color__text--primary fmc-button--modalopener" data-modal-opener="Login modal"><a href="#">Log out</a></li>
                     <li class="fds-color__text--primary"><a href="./faqs.html">FAQs</a></li>
                     <li class="fds-color__text--primary"><a href="./contact-us.html">Contact us</a></li>
                 </ul>
@@ -80,14 +80,12 @@
                         <p class="fmc-type--body1 fmc-type--white fmc-mb-3">The Plan price is clearly marked on the vehicle invoice. Simply ask for a copy of the invoice to confirm special pricing.</p>
                         <p class="fmc-type--body1 fmc-type--bold fmc-type--white fmc-mb-1">Great Value.</p>
                         <p class="fmc-type--body1 fmc-type--white fmc-mb-6">You get exclusive pricing in addition to most other publicly offered programs.</p>
-                        <button class="fmc-button" data-dark>Learn More</button>
+                        <button class="fmc-button fmc-mr-3 fmc-button--modalopener" data-modal-opener="Membership Organization Partner" data-dark>Learn more 1</button>
+                        <button class="fmc-button fmc-button--modalopener" data-modal-opener="Employee Partner" data-dark>Learn more 2</button>
                     </div>
                 </div>
                 <div class="fds-layout-grid__inner fmc-pt-3">
                     <div class="fds-layout-grid__cell--span-6">
-                        <button class="fmc-button fmc-mr-3 fmc-button--modalopener" data-modal-opener="Login modal" data-dark>Modal 1</button>
-                        <button class="fmc-button fmc-mr-3 fmc-button--modalopener" data-modal-opener="Membership Organization Partner" data-dark>Modal 2</button>
-                        <button class="fmc-button fmc-button--modalopener" data-modal-opener="Employee Partner" data-dark>Modal 3</button>
                     </div>
                 </div>
                 <div class="fds-layout-grid__inner fmc-pt-13">
