--- a/program-rules.html
+++ b/program-rules.html
@@ -67,10 +67,12 @@
         <div class="fds-layout-grid">
             <h1 class="fmc-type--heading4 fds-align--center fmc-mb-7">X-Plan Program Rules</h1>
             <p class="fmc-mb-7">As you may be aware, this is a time of high demand for new vehicles - and low inventory. Our industry is experiencing global supply-chain constraints. We recommend your employees/members contact local Ford dealerships or Lincoln Retailer's to confirm they are participating in the Ford X-Plan Program. </p>
-            <button class="fmc-button fds-display--block fmc-mx-auto">
-                Download Program Rules
-                <span class="fds-icon fds-font--ford-icons__chevron-down fds-icon--offset-right"></span>
-            </button>
+            <p class="fds-align--center">
+                <a class="fmc-button" href="./files/program-rule.pdf" target="_blank" download="Program Rules">
+                    Download Program Rules
+                    <span class="fds-icon fds-font--ford-icons__chevron-down fds-icon--offset-right"></span>
+                </a>
+            </p>
         </div>
     </main>
     <footer class="footer">
