--- a/faqs.html
+++ b/faqs.html
@@ -52,11 +52,17 @@
                     </div>
                     <div class="fds-layout-grid__cell--span-3 fds-align--right">
                         <div class="header__user-area">
-                            <a href="./index.html">
-                                <img src="./img/header-flag.svg" alt="" class="header__flag">
-                            </a>
-                            <p class="fmc-type--content2 fmc-mb-1">Welcome, Academy Ford Sales</p>
-                            <p class="fmc-type--content2 fmc-type--bold">Membership Organization Partner</p>
+                            <div class="header__user-areaTop">
+                                <img src="./img/header-flag-canada.svg" alt="" class="header__flag">
+                                <div class="header__user-areaLangs">
+                                    <a class="header__user-areaLangsItem header__user-areaLangsItem_active" href="#">English</a>
+                                    <a class="header__user-areaLangsItem" href="#">Français</a>
+                                </div>
+                            </div>
+                            <div class="header__user-areaBottom">
+                                <p class="fmc-type--content2 fmc-mb-1">Welcome, Academy Ford Sales</p>
+                                <p class="fmc-type--content2 fmc-type--bold">Membership Organization Partner</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -69,22 +75,17 @@
             <ol class="fmc-list">
                 <li class="fmc-mb-4 fmc-type--body1 fmc-type--bold">
                     <p class="fmc-type--body1 fmc-type--bold fmc-mb-1">How does the Partner Recognition program work?</p>
-                    <p class="fmc-pl-1">The Plan is based on the use of a Personal Identification Number (PIN) in conjunction with the last 4 digits of the eligible participants' Social Security Number. This information authorizes the participant to obtain a discount on eligible new Ford Motor Company or Lincoln Motor Company vehicles. For further details, please visit <a href="https://www.fordpartner.com/" target="_blank">https://www.fordpartner.com/</a>.</p>
+                    <p class="fmc-pl-1">The Plan is based on the use of a Personal Identification Number (PIN) in conjunction with the last 4 digits of the SIN Number. This information authorizes the participant to obtain a discount on eligible new Ford Motor Company or Lincoln Motor Company vehicles. For further details, please visit <a href="https://www.fordpartner.com/" target="_blank">https://www.fordpartner.com/</a>.</p>
                 </li>
                 <li class="fmc-mb-4 fmc-type--body1 fmc-type--bold">
                     <p class="fmc-type--body1 fmc-type--bold fmc-mb-1">Who is eligible? Proof of Eligibility.</p>
-                    <p class="fmc-pl-1 fmc-mb-2">
-                        Active employees (salaried, hourly and contract), retirees, members of organizations and their households who reside within the U.S. You will be required to show proof of employment or membership by an organization or company eligible for Partner Recognition benefits at the time you take delivery of your vehicle. See our <a href="https://www.fordpartner.com/partnerweb/jsp/howitworks/fordpartner_rules.htm?#xplan" target="_blank">X-Plan Eligibility</a> section for details. Driver's licenses' will be required for proof of residence for the Partner Company employee and household member.
-                    </p>
-                    <p class="fmc-pl-1 fmc-mb-2">
-                        <strong class="fmc-type--bold">Employment</strong> - Any one of the following: a pay stub, company ID badge, healthcare card or W-2, print out from www.theworknumber.com or a valid member card.
-                    </p>
-                    <p class="fmc-pl-1">
-                        <strong class="fmc-type--bold">Member Organization</strong> - Customer must be a member of eligible organization for a minimum of 90 days prior to the sale date of the vehicle. One of the following are accepted: Membership Card, Invoice showing customer is within good standing and is current, or Screen print of Website ( Must show full name and member since information). 
-                    </p>
+                    <ul style="list-style-type: disc;">
+                        <li class="fmc-pl-1">X-Plan Supplier: Active employees, retirees and their spouses (no other family members are eligible) at Canadian locations of selected Ford Motor Company and Ford of Canada suppliers are eligible for the X-Plan pricing.</li>
+                        <li class="fmc-pl-1">X-Plan Fleet Account: Available to all employees of Ford of Canada's selected fleet accounts that continue to use Ford vehicles as their vehicles of choice for fleet needs.</li>
+                    </ul>
                 </li>
                 <li class="fmc-mb-4 fmc-type--body1 fmc-type--bold">
-                    <p class="fmc-type--body1 fmc-type--bold fmc-mb-1">How do employees/members to participate?</p>
+                    <p class="fmc-type--body1 fmc-type--bold fmc-mb-1">How do employees/members participate?</p>
                     <p class="fmc-pl-1">Each time you wish to participate in the Plan you will need to obtain an approval prior to the purchase. For each approval you will need to generate a new Personal Identification Number (PIN). To request a PIN, go the "Generate a PIN" tab from Ford or Lincoln web site versions at <a href="https://www.fordpartner.com/">https://www.fordpartner.com/</a>.</p>
                 </li>
                 <li class="fmc-mb-4 fmc-type--body1 fmc-type--bold">
@@ -101,11 +102,11 @@
                 </li>
                 <li class="fmc-mb-4 fmc-type--body1 fmc-type--bold">
                     <p class="fmc-type--body1 fmc-type--bold fmc-mb-1">Once I receive my PIN, how do I procure a vehicle and obtain the plan discount?</p>
-                    <p class="fmc-pl-1 fmc-mb-2">Provide the dealer with your PIN and the last 4 digits of your Social Security Number. The dealer can confirm with this data that you are an eligible Plan participant.</p>
+                    <p class="fmc-pl-1 fmc-mb-2">Provide the dealer with your PIN and the last 4 digits of your SIN number. The dealer can confirm with this data that you are an eligible Plan participant.</p>
                     <p class="fmc-pl-1 fmc-mb-2">You will be required to provide appropriate "proof of identity” and sponsors “proof of employment” to the dealer before completing the sale.</p>
                     <ul style="list-style-type: disc;">
-                        <li class="fmc-pl-1">Employment - Any one of the following: a pay stub, company ID badge, healthcare card or W-2, print out from www.theworknumber.com or a valid member card.</li>
-                        <li class="fmc-pl-1">Member Organization - Customer must be a member of eligible organization for a minimum of 90 days prior to the sale date of the vehicle. One of the following are accepted : Membership Card, Invoice showing customer is within good standing and is current, or Screen print of Website ( Must show full name and member since information ).</li>
+                        <li class="fmc-pl-1">Documentation providing proof of employment from the eligible Supplier Company or Fleet customer in the form of a paystub or official company identification as defined in the individual program rules. For retired employees from an eligible Partner Supplier, proof of retirement will be required.</li>
+                        <li class="fmc-pl-1">For spouses (X-Plan Supplier Company) a copy of the customer driver's license will be required (as verification of the same household as sponsor), plus proof of sponsor employment (as noted above).</li>
                     </ul>
                 </li>
                 <li class="fmc-mb-4 fmc-type--body1 fmc-type--bold">
@@ -114,7 +115,7 @@
                 </li>
                 <li class="fmc-mb-4 fmc-type--body1 fmc-type--bold">
                     <p class="fmc-type--body1 fmc-type--bold fmc-mb-1">Can I obtain a vehicle for my business or for another person?</p>
-                    <p class="fmc-pl-1">Yes. You may extend your Partner Recognition privileges to your spouse or any member of your household (requires driver's license verification). Additionally, you may purchase the vehicle in the name of a business owned by you, your spouse or household member.</p>
+                    <p class="fmc-pl-1">Vehicle may not be registered in the name of a business. For X-Plan Supplier Company, you may extend your Partner Recognition privileges to your spouse of your household (requires driver's license verification).</p>
                 </li>
                 <li class="fmc-mb-4 fmc-type--body1 fmc-type--bold">
                     <p class="fmc-type--body1 fmc-type--bold fmc-mb-1">Are any other items covered through the Plan?</p>
