--- a/marketing-toolkit.html
+++ b/marketing-toolkit.html
@@ -52,11 +52,17 @@
                     </div>
                     <div class="fds-layout-grid__cell--span-3 fds-align--right">
                         <div class="header__user-area">
-                            <a href="./index.html">
-                                <img src="./img/header-flag.svg" alt="" class="header__flag">
-                            </a>
-                            <p class="fmc-type--content2 fmc-mb-1">Welcome, Academy Ford Sales</p>
-                            <p class="fmc-type--content2 fmc-type--bold">Membership Organization Partner</p>
+                            <div class="header__user-areaTop">
+                                <img src="./img/header-flag-canada.svg" alt="" class="header__flag">
+                                <div class="header__user-areaLangs">
+                                    <a class="header__user-areaLangsItem header__user-areaLangsItem_active" href="#">English</a>
+                                    <a class="header__user-areaLangsItem" href="#">Français</a>
+                                </div>
+                            </div>
+                            <div class="header__user-areaBottom">
+                                <p class="fmc-type--content2 fmc-mb-1">Welcome, Academy Ford Sales</p>
+                                <p class="fmc-type--content2 fmc-type--bold">Membership Organization Partner</p>
+                            </div>
                         </div>
                     </div>
                 </div>
