--- a/marketing-toolkit.html
+++ b/marketing-toolkit.html
@@ -61,7 +61,7 @@
                             </div>
                             <div class="header__user-areaBottom">
                                 <p class="fmc-type--content2 fmc-mb-1">Welcome, Academy Ford Sales</p>
-                                <p class="fmc-type--content2 fmc-type--bold">Membership Organization Partner</p>
+                                <p class="fmc-type--content2 fmc-type--bold">Employee Partner</p>
                             </div>
                         </div>
                     </div>
@@ -96,15 +96,6 @@
                       tabindex="0"
                     >
                     X-Plan Print Assets
-                    </button>
-                    <button
-                      class="fmc-tabs__tab fds-color__text--gray2 fmc-type--bold"
-                      role="tab"
-                      aria-selected="false"
-                      aria-controls="xPlanDigitalAssets"
-                      tabindex="-1"
-                    >
-                    X-Plan Digital Assets
                     </button>
                     <button
                       class="fmc-tabs__tab fds-color__text--gray2 fmc-type--bold"
@@ -173,76 +164,6 @@
                                 <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-pb-8">
                                     <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/marketing toolkit/4.png" alt="a placeholder" />
                                     <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Ford - Ford Brochure</p>
-                                    <a class="fmc-button" href="#">
-                                        Download file
-                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="fmc-tabs__tabpanel fmc-pt-4" role="tabpanel" aria-labelledby="xPlanDigitalAssets" tabindex="-1">
-                        <div class="fds-layout-grid">
-                            <div class="fds-layout-grid__inner">
-                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-pb-8">
-                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/marketing toolkit/5.png" alt="a placeholder" />
-                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>HTML Email (zipped files)B</p>
-                                    <a class="fmc-button" href="#">
-                                        Download file
-                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
-                                    </a>
-                                </div>
-                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-pb-8">
-                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/marketing toolkit/6.png" alt="a placeholder" />
-                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Facebook banner 1080x1080</p>
-                                    <a class="fmc-button" href="#">
-                                        Download file
-                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
-                                    </a>
-                                </div>
-                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-pb-8">
-                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/marketing toolkit/6.png" alt="a placeholder" />
-                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Twitter Banner 1000x1000</p>
-                                    <a class="fmc-button" href="#">
-                                        Download file
-                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
-                                    </a>
-                                </div>
-                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-pb-8">
-                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/marketing toolkit/6.png" alt="a placeholder" />
-                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Instagram banner 1080x1080</p>
-                                    <a class="fmc-button" href="#">
-                                        Download file
-                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
-                                    </a>
-                                </div>
-                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-pb-8">
-                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/marketing toolkit/6.png" alt="a placeholder" />
-                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Web banner 160x600</p>
-                                    <a class="fmc-button" href="#">
-                                        Download file
-                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
-                                    </a>
-                                </div>
-                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-pb-8">
-                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/marketing toolkit/7.png" alt="a placeholder" />
-                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Web banner 300x250</p>
-                                    <a class="fmc-button" href="#">
-                                        Download file
-                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
-                                    </a>
-                                </div>
-                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-pb-8">
-                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/marketing toolkit/8.png" alt="a placeholder" />
-                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>FWeb banner 300x600</p>
-                                    <a class="fmc-button" href="#">
-                                        Download file
-                                        <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
-                                    </a>
-                                </div>
-                                <div class="fds-layout-grid__cell--span-4 fds-align--center fmc-pb-8">
-                                    <img class="fmc-marketing-toolkit-img fmc-cards__image fmc-mb-2" src="./img/marketing toolkit/9.png" alt="a placeholder" />
-                                    <p class="fmc-type--body2 fmc-type--bold fmc-mb-3">X-Plan Partner Recognition<br>Web banner 728x90</p>
                                     <a class="fmc-button" href="#">
                                         Download file
                                         <span class="fds-icon fds-font--ford-icons__chevron-right fds-icon--offset-right"></span>
