--- a/sales-reporting.html
+++ b/sales-reporting.html
@@ -61,7 +61,7 @@
                           </div>
                           <div class="header__user-areaBottom">
                               <p class="fmc-type--content2 fmc-mb-1">Welcome, Academy Ford Sales</p>
-                              <p class="fmc-type--content2 fmc-type--bold">Membership Organization Partner</p>
+                              <p class="fmc-type--content2 fmc-type--bold">Employee Partner</p>
                           </div>
                       </div>
                     </div>
